<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_TituloJuego"
            android:layout_marginTop="118dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/texto_titulo"
            android:textColor="?attr/actionModeSplitBackground"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:text="@string/editText_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Titulo_Jugador"
            android:layout_below="@+id/textView_subtitulo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="29dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_NombreJugador"
            android:layout_below="@+id/textView_Titulo_Jugador"
            android:hint="@string/editText_nombre"
            android:textSize="12sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/editText_NombreJugador"
            android:id="@+id/grupoRadioButtons">

            <RadioButton
                android:text="Noob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonNoob"
                android:layout_weight="0.46" />

            <RadioButton
                android:text="@string/radiobutton_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonNormal"
                android:layout_weight="0.78" />

            <RadioButton
                android:text="Pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonPro"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="71dp"
            android:layout_below="@+id/editText_NombreJugador"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:text="@string/boton_iniciar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonIniciar"
                android:layout_weight="1"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonCancelar"
                android:layout_weight="1"
                tools:ignore="ButtonStyle"
                android:text="@string/boton_cancelar" />
        </LinearLayout>

        <TextView
            android:text="@string/textView_subtitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_subtitulo"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_below="@+id/textView_TituloJuego"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</LinearLayout>